# libft

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.42  Makefile.am  README.md  _.mk  author  ft_atoi.c  ft_bzero.c  ft_getline_fd.c  ft_isalpha.c  ft_isascii.c  ft_islower.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+26 more)
include/: ft.h  ft_ctype.h  ft_fcntl.h  ft_libgen.h  ft_signal.h  ft_stat.h  ft_stdio.h  ft_stdlib.h  ft_string.h  ft_strings.h  ft_unistd.h  uio.h
includes/: libft.h
src/: Makefile.am  _.mk  __environ.h  ft_atoi.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstadd.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_strcat.c  ft_strdel.c  ft_strncmp.c  ft_strrev.c  ft_strtrim.c  libft.h
src/.deps/: ft_atoi.Po  ft_bzero.Po  ft_isalnum.Po  ft_isalpha.Po  ft_isascii.Po  ft_isdigit.Po  ft_islower.Po  ft_isprint.Po  ft_isspace.Po  ft_isupper.Po  ft_isxdigit.Po  ft_itoa.Po  ft_lstadd.Po  ft_lstdel.Po  ft_lstdelone.Po  ft_lstiter.Po  ft_lstmap.Po  ft_lstnew.Po  ft_memalloc.Po  ft_memccpy.Po  ft_memchr.Po  ft_memcmp.Po  ft_memcpy.Po  ft_memdel.Po  ft_memmove.Po  ft_memset.Po  ft_putchar.Po  ft_putchar_fd.Po  ft_putendl.Po  ft_putendl_fd.Po  ft_putnbr.Po  ft_putnbr_fd.Po  ft_putstr.Po  ft_putstr_fd.Po  ft_strcat.Po  ft_strchr.Po  ft_strclr.Po  ft_strcmp.Po  ft_strcpy.Po  ft_strdel.Po  (+26 more)
src/ft/: itoa.c  rerealloc.c  strjoin.c  strnew.c  strsplit.c  strtrim.c  ufputc.c  ufputn.c  ufputs.c  ufputsn.c  ugetline.c  ugetline.h  uputc.c  uputn.c  uputs.c  uputsn.c
src/ft_ctype/: _.mk  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_toascii.c  ft_tolower.c  ft_toupper.c
src/ft_fcntl/: ft_creat.c
src/ft_libgen/: ft_basename.c  ft_dirname.c
src/ft_signal/: ft_kill.c
src/ft_stat/: ft_chmod.c  ft_mkdir.c  ft_mknod.c
src/ft_stdio/: ft_asprintf.c  ft_fprintf.c  ft_fputc.c  ft_fputs.c  ft_fscanf.c  ft_getline.c  ft_printf.c  ft_putc.c  ft_putchar.c  ft_puts.c  ft_scanf.c  ft_snprintf.c  ft_sprintf.c  ft_sscanf.c  ft_vasprintf.c  ft_vprintf.c  ft_vscanf.c  ft_vsprintf.c
src/ft_stdlib/: _.mk  __env.h  env.h  ft_a64l.c  ft_abs.c  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_bsearch.c  ft_calloc.c  ft_clearenv.c  ft_div.c  ft_free.c  ft_getenv.c  ft_l64a.c  ft_l64a_r.c  ft_labs.c  ft_ldiv.c  ft_llabs.c  ft_lldiv.c  ft_malloc.c  ft_putenv.c  ft_realloc.c  ft_setenv.c  ft_strtol.c  ft_strtoll.c  ft_unsetenv.c  internal_env.h
src/ft_string/: _.mk  ft_bcmp.c  ft_bcopy.c  ft_bzero.c  ft_ffs.c  ft_ffsl.c  ft_ffsll.c  ft_fls.c  ft_flsl.c  ft_flsll.c  ft_index.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmem.c  ft_memmove.c  ft_mempcpy.c  ft_memrchr.c  ft_memset.c  ft_rindex.c  ft_stpcpy.c  ft_stpncpy.c  ft_strcasecmp.c  ft_strcasestr.c  ft_strcat.c  ft_strchr.c  ft_strchrnul.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strlwr.c  ft_strncasecmp.c  ft_strncat.c  ft_strncmp.c  (+14 more)
src/ft_strings/: _.mk  ft_bcmp.c  ft_bcopy.c  ft_bzero.c  ft_ffs.c  ft_fls.c  ft_index.c  ft_rindex.c  ft_strcasecmp.c
src/ft_unistd/: _.mk  ft_chdir.c  ft_chown.c  ft_execv.c  ft_execve.c  ft_execvp.c  ft_getopt.c  ft_link.c  ft_lseek.c  ft_pipe.c  ft_readlink.c  ft_rmdir.c  ft_symlink.c  ft_unlink.c
src/uio/: _.mk  __ufgetl.h  ufgetc.c  ufgetl.c  ufputc.c  ufputcn.c  ufputn.c  ufputnn.c  ufputs.c  ufputsn.c  ugetc.c  ugetl.c  uputc.c  uputcn.c  uputn.c  uputnn.c  uputs.c  uputsn.c
